samples/_failures_safe/1761563963_25eb39_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_732f7591.c: In function ‘main’:
./samples/SAFE/__tmp_732f7591.c:145:5: error: expected declaration or statement at end of input
  145 |     if (entry_count == 0) {
      |     ^~
./samples/SAFE/__tmp_732f7591.c:145:5: error: expected declaration or statement at end of input
